--- a/website/src/index.css
+++ b/website/src/index.css
@@ -1,3 +1,9 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 :root {
   --primary-color: #048d7b;
   --primary-gradient-start: #045F72;
